# Stock-Predictor-v2

./: .gitignore  LICENSE  old_README.md  pyproject.toml  requirements.txt  uv_readme.md
dagster_project/: definitions.py  jobs.py  schedules.py
dagster_project/assets/: __init__.py  collect_data.py  ensemble_model.py  indicator_features.py  lag_features.py  lstm_model.py  preprocessing.py  raw_daily_data.py  targets.py  xgboost_model.py
data/processed/: NVDA_X_predict_scaled.csv  NVDA_X_test_scaled.csv  NVDA_X_train_scaled.csv  NVDA_X_val_scaled.csv  NVDA_daily_lagged.csv  NVDA_features.csv  NVDA_target_price.csv  NVDA_target_updown.csv  NVDA_y_test_cls.csv  NVDA_y_test_reg.csv  NVDA_y_train_cls.csv  NVDA_y_train_reg.csv  NVDA_y_val_cls.csv  NVDA_y_val_reg.csv  nvda_daily_lagged.csv  nvda_features.csv  nvda_target_price.csv  nvda_target_updown.csv
data/raw/: NVDA_daily.csv  nvda_daily.csv
models/: NVDA_best_model_cls.keras  NVDA_latest_predictions.csv  NVDA_latest_predictions_cls.csv  NVDA_latest_predictions_reg.csv  NVDA_lstm_model_cls.keras  NVDA_test_predictions.csv  NVDA_test_predictions_cls.csv  NVDA_test_predictions_reg.csv  NVDA_training_history.csv  NVDA_training_history_cls.csv  NVDA_training_history_reg.csv
models/NVD.DE/: NVD.DE_best_model_cls.keras  NVD.DE_feature_importance_xgb_cls.csv  NVD.DE_feature_importance_xgb_reg.csv  NVD.DE_latest_predictions_cls.csv  NVD.DE_latest_predictions_reg.csv  NVD.DE_latest_predictions_xgb_cls.csv  NVD.DE_latest_predictions_xgb_reg.csv  NVD.DE_lstm_model_cls.keras  NVD.DE_test_predictions_cls.csv  (+7 more)
(+319 files in other folders)
