[project]
name = "dagster_project"
version = "2.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.14"
dependencies = [
    "dagster>=1.12.1",
    "dagster-webserver>=1.12.1",
    "matplotlib>=3.9.4",
    "mplfinance>=0.12.10b0",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "plotly>=6.4.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "ta>=0.11.0",
    "tensorflow>=2.20.0",
    "xgboost==2.1.3",
    "yfinance>=0.2.66",
]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "dagster_project.definitions"
code_location_name = "dagster_project"

[tool.setuptools.packages.find]
exclude=["dagster_project_tests"]
